hphp/hack/test/typecheck/static_polymorphism_undefined.php
<?hh

function f() {
  $a::foo();
}
